projects/vb6parse/snapshots/syntax/library/functions/file/eof/eof_with_freefile.snap
---
source: projects/vb6parse/src/syntax/library/functions/file/eof.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: fileNum
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: FreeFile
        - kind: Newline
          text: "\n"
    - kind: OpenStatement
      children:
        - kind: OpenKeyword
          text: Open
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: path
        - kind: Whitespace
          text: " "
        - kind: ForKeyword
          text: For
        - kind: Whitespace
          text: " "
        - kind: KeywordClause
          children:
            - kind: InputKeyword
              text: Input
        - kind: Whitespace
          text: " "
        - kind: ExpressionClause
          children:
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Octothorpe
                  text: "#"
                - kind: Identifier
                  text: fileNum
    - kind: Newline
      text: "\n"
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: UntilKeyword
          text: Until
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: EOF
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: fileNum
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: LineInputStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: LineKeyword
                  text: Line
                - kind: Whitespace
                  text: " "
                - kind: InputKeyword
                  text: Input
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: Identifier
                  text: fileNum
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: LineKeyword
                  text: line
                - kind: Newline
                  text: "\n"
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
    - kind: CloseStatement
      children:
        - kind: CloseKeyword
          text: Close
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: Identifier
                      text: fileNum
    - kind: Newline
      text: "\n"
